Leeds seminar outline

--- a/2017/22-05-leeds-computing.tex
+++ b/2017/22-05-leeds-computing.tex
@@ -92,6 +92,32 @@ London
   problems.
 \end{abstract}
 
+\begin{frame}
+  Finite element 101
+
+  Introduce UFL as symbolic description language
+
+  Weave in problem specific data
+
+  Introduce Firedrake as a concrete example
+
+  What does the symbolic description bring us?
+
+  Not just pretty syntax, but we can teach the computer to reason
+  about the model.
+
+  We can synthesise efficient implementations from this problem
+  description.
+
+  Including applying optimisations that are tricky to get right by
+  hand (sum factorisation example)
+
+  Weaving together symbolics also allows usntructured tiling
+
+  Composing with linear algebra, reversing the one-way street.
+
+  Complex preconditioning, by composing the pieces we already have.
+\end{frame}
 \appendix
 \begin{frame}[t,allowframebreaks]
   \frametitle{References}
